Event Create and Delete (#7)
# Description

[Link to
Ticket](https://github.com/orgs/GenerateNU/projects/31?pane=issue&itemId=50951677)

Implement Create and Delete backend endpoints for events. Include
validation on inputs and tests for invalid inputs. Also write tests to
ensure repeated POST calls always creates new events and repeated
DELETEs fail when an event does not exist.

POST (/events) a completely new event (note: return the created event
object if successful, so that its ID is immediately available to caller)
DELETE (/events/:id) an existing event returning the deleted object

# How Has This Been Tested?

Two tests found in events_test.go, one for each endpoint. They both use
database mocks to ensure that the expected SQL queries are executed when
our controller implementation is used.

# Checklist

- [x] I have performed a self-review of my code
- [x] I have reached out to another developer to review my code
- [x] I have commented my code, particularly in hard-to-understand areas
- [x] New and existing unit tests pass locally with my changes

---------
